--- a/css/wall.css
+++ b/css/wall.css
@@ -1,11 +1,14 @@
 html, body {width: 100%; height: 100%;}
-.wall {width: 100%; height: 100%;
+.wall {
+    width: 100%;
+    height: 100%;
     background-image: url(../img/icon-wall.jpg);
     overflow: hidden;
     background-color: #121936;
-    background-size: 100% 100% ;
+    background-size: cover;
     background-position: center center;
-    background-repeat: no-repeat;}
+    background-repeat: no-repeat;
+}
 .photos-wall {width:100%; height:100%;}
 .messages {width: 30%;  float: left;  position: relative; top: 52px; left: 0}
 
